Add server code and fetch.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -22,7 +22,11 @@
       </p>
       <br></br>
       <br></br>
-      <!--<p>Click <a href="/hello">here</a> to see content created by server code.</p></p>-->
+      <p>Click <a href="/hello">here</a> to see content created by server code.</p></p>-->
+      <button onclick="showName();">
+        Get name
+      </button>
+      <p id="name-container"></p>
       <!--<p>Click here to learn something new:</p>
       <button onclick="addRandomGreeting()">Facts</button>
       <div id="greetings-container"></div>
